# HLF_lab

./: README.md
lab1/: input_coord.txt  lr1.cpp  lr1.h
labwork1/: input_coord.txt  lr1.cpp  lr1.h
labwork2/: glass.txt  lab2.cpp
labwork4/: CMakeLists.txt  README.md  array2d.h  complex_array.cpp  complex_array.h  main.cpp  real_matrix.cpp  real_matrix.h
labwork5/: CMakeLists.txt  README.md  fourier_params.cpp  fourier_params.h  labwork5.pro  main.cpp  param_window.cpp  param_window.h  param_window.ui
labwork6/: CMakeLists.txt  README.md  fft_processor.cpp  fft_processor.h  labwork6.pro  main.cpp  spectrum_window.cpp  spectrum_window.h  spectrum_window.ui
labwork7/: CMakeLists.txt  README.md  app_settings.h  labwork7.pro  libfftw3-3.lib  main.cpp  optimized_fft.cpp  optimized_fft.h  viewer_window.cpp  viewer_window.h  viewer_window.ui
labwork8/: CMakeLists.txt  README.md  deploy.sh  tests.cpp
